<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/more_apps">
        <PreferenceScreen
            android:summary="@string/more_apps_summary"
            android:title="@string/more_apps">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/developer?id=SHARK+App+Development"/>
        </PreferenceScreen>
        <Preference
            android:key="changelog"
            android:title="@string/changelog"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/source_code">
        <PreferenceScreen
            android:title="@string/source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/harshapulikollu/Active"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/devs_who_helped_me">
        <PreferenceScreen
            android:summary="MaterialFBook"
            android:title="ZooRooo">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/ZeeRooo/MaterialFBook"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="Toffeed"
            android:title="JakeLane">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/JakeLane/Toffeed"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="FaceSlim"
            android:title="indywidualny">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/indywidualny/FaceSlim"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="SlimSocial for Facebook"
            android:title="rignaneseleo">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/rignaneseleo/SlimSocial-for-Facebook"/>
        </PreferenceScreen>

        <PreferenceScreen
            android:summary="Folio for Facebook"
            android:title="creativetrendsapps">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/creativetrendsapps/FolioforFacebook"/>
        </PreferenceScreen>

        <PreferenceScreen
            android:summary="FloatingActionButton"
            android:title="Clans">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Clans/FloatingActionButton"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="CircleImageView"
            android:title="hdodenhof">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/hdodenhof/CircleImageView"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="Glide"
            android:title="bumptech">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/bumptech/glide"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="PhotoView"
            android:title="chrisbanes">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/chrisbanes/PhotoView"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_translations">
       <!-- <PreferenceScreen
            android:title="@string/help_translations">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.transifex.com/yaron/materialfbook/translate/"/>
        </PreferenceScreen> -->
        <PreferenceScreen
            android:title="@string/withYou">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/harshapulikollu/Active/issues"/>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
